2001-03-31  Roland McGrath  <roland@frob.com>

	* ugids.h: Fix obsolescent #endif syntax.

2001-03-29  Neal H Walfield  <neal@cs.uml.edu>

        * idvec-auth.c (idvec_merge_auth): Really allow parameters
        to be NULL.

2001-02-25  Roland McGrath  <roland@frob.com>

	* idvec.h: Include <string.h> for memcmp decl.

	* wire.c (map_extent): Add dead return stmt to silence gcc warning.

2001-02-20  Marcus Brinkmann  <marcus@gnu.org>

	* timefmt.c: Include <time.h>.  Reported by Arkadi E. Shishlov
	<arkadi@it.lv>.

2000-10-30  Marcus Brinkmann  <marcus@gnu.org>

	* wire.c: Include <error.h>.

2000-10-29  Roland McGrath  <roland@frob.com>

	* wire.c (map_extent): Pass second arg of RTLD_NOLOAD to dlopen.
	(RTLD_NOLOAD): Define macro to zero if undefined.

	* wire.c (map_extent): Rewrite using dlsym on library's _end symbol.

2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* options.c, options.h: Ancient unused files removed.

2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>

	* exec-reauth.c (exec_reauth): Always destroy REF, even when we
	get errors.

2000-01-29  Roland McGrath  <roland@baalperazim.frob.com>

	* maptime.h: Include <errno.h> for error_t decl.

1999-10-29  Roland McGrath  <roland@baalperazim.frob.com>

	* wire.c: Use a weak reference to _DYNAMIC.

1999-09-29  Mark Kettenis  <kettenis@gnu.org>

	* idvec.c (idvec_setid): Switch last two arguments in call to
	idvec_insert_only.
	* idvec.h: Doc fix.

1999-09-27  Thomas Bushnell, BSG  <tb@mit.edu>

	* idvec.c (idvec_setid): Implement Posix saved set-user id
	correctly.
	(idvec_insert_only): Doc fix.
	Reported by Mark Kettenis <kettenis@wins.uva.nl>.

1999-08-23  Roland McGrath  <roland@baalperazim.frob.com>

	* wire.c (map_extent): Use p_memsz instead of p_filesz.
	(loaded): Return zero if _DYNAMIC has address zero (i.e., static link).

1999-08-19  Roland McGrath  <roland@baalperazim.frob.com>

	* mktime.c: File removed.  Current libc code is good.
	* Makefile (SRCS): Remove mktime.c.
